<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/grp1">
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile"/>

        <item
            android:id="@+id/menu_create_event"
            android:icon="@drawable/ic_edit"
            android:title="@string/create_event"/>

        <item
            android:id="@+id/menu_send_message"
            android:icon="@drawable/ic_send"
            android:title="@string/send_message"/>

        <item
            android:id="@+id/menu_manage_user"
            android:icon="@drawable/ic_users"
            android:title="@string/manage_users"/>
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/menu_events"
            android:title="@string/events"/>

        <item
            android:id="@+id/invites"
            android:title="@string/invites"/>
    </group>

    <group android:id="@+id/grp3">
        <item android:title="@string/option">
            <menu>
                <item
                    android:id="@+id/menu_back_up"
                    android:icon="@drawable/ic_backup"
                    android:title="@string/backup"/>

                <item
                    android:id="@+id/menu_help_feedback"
                    android:icon="@drawable/ic_help"
                    android:title="@string/help_feedback"/>
            </menu>
        </item>
    </group>
</menu>